2008-04-01  Philippe Brochard  <hocwp@free.fr>

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Stop button
	event only if there is a geometry change.

2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Return t if there
	is a geometry change.

2008-03-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings.lisp (Up/Down): Swap select previous/next level.

	* src/bindings-second-mode.lisp (Up/Down): Swap select previous/next level.

	* src/clfswm.lisp (init-display): Create a default frame in the root frame.

	* src/clfswm-internal.lisp (place-frame): Place frame from real (pixel) coordinates.
	(with-all-*): Reverse the child list to manage the first child last (like in 
	show-all-children).

	* src/config.lisp (*create-frame-on-root*): New variable: Create a new frame on the
	root window only if true.

	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Create a new frame on the
	root window only if *create-frame-on-root* is true.

	* src/bindings-second-mode.lisp (sm-mouse-click-to-focus-generic): Create a new frame
	on the root window.

2008-03-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (sm-mouse-click-to-focus-generic): Focus, move and resize
	the current child (even if it's a window).

2008-03-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (mouse-click-to-focus-and-move)
	(mouse-click-to-focus-and-resize): New functions.

	* src/clfswm-internal.lisp (*-fl->px): Convert float coordinates to pixel.
	(*-px->fl): Convert pixel coordinates to float.

	* src/tools.lisp (call-hook): Move call-hook to tools.lisp.

2008-03-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (no-layout): Use :first-only to raise only the
	first child.

	* src/clfswm-internal.lisp (hide-all): Split hide-all-children in hide-all 
	and hide-all-children.
	(raise-if-needed): New function.