@@ -1,7 +1,12 @@
-2008-04-01  Philippe Brochard  <hocwp@free.fr>
+2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/bindings.lisp: Bind Alt+mouse-1/3 to move or resize a frame
+	or the window's father.
 
 	* src/clfswm-util.lisp (mouse-click-to-focus-generic): Stop button
 	event only if there is a geometry change.
+	(mouse-focus-move/resize-generic): Generic function to move or
+	resize a frame or a window father frame.
 
 2008-04-01  Philippe Brochard  <pbrochard@common-lisp.net>
 
